@@ -1,6 +1,6 @@
 
 # Editor release-wide properties
-editor.release.number=1.4.2_20060616
+editor.release.number=1.4.2_20060707
 editor.contributors=Lindsay Bradford, Moe Wyn
 compatible.engine.release.number=Beta 7.2.1
 compatible.java.release.number=1.4.2_08
